[package]
name = "thruster-perf-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jab-ex"
path = "src/main-jab.rs"

[[bin]]
name = "static-ex"
path = "src/main-static.rs"

[dependencies]
thruster = { version = "1.3.1", features = ["hyper_server"] }
thruster-jab = "0.1.0"
tokio = { version = "1.28.1", features = ["full"] }
